2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* Makefile.in (gethelp$(BUILD_EXEEXT)): Pass $(BUILD_CXXFLAGS) and
	$(BUILD_LDFLAGS) to compiler.

2003-01-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/num2str.m: Don't specify field width for scalars.

2003-01-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DISTFILES): Don't forget mkpkgadd.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* gethelp.cc: Define __USE_STD_IOSTREAM if using Compaq C++.

	* miscellaneous/tempname.m: New file.

	* miscellaneous/tempdir.m: New file.

	* miscellaneous/fullfile.m: New file.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/fileparts.m: New file.

	* io/beep.m: New file.

	* plot/__pltopt1__.m: Call undo_string_escapes for title part of
	format only.

2003-01-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strcmp.m: Handle cell arrays of strings.

2002-12-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Handle matrices.
	* general/num2str.m: Likewise.
	Also handle optional precision, and format args.

2002-12-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* audio/Makefile.in, control/base/Makefile.in,
	control/hinf/Makefile.in, control/obsolete/Makefile.in,
	control/system/Makefile.in, elfun/Makefile.in,
	finance/Makefile.in, general/Makefile.in, image/Makefile.in,
	io/Makefile.in, linear-algebra/Makefile.in,
	miscellaneous/Makefile.in, polynomial/Makefile.in,
	quaternion/Makefile.in, set/Makefile.in, signal/Makefile.in,
	specfun/Makefile.in, special-matrix/Makefile.in,
	statistics/base/Makefile.in, statistics/distributions/Makefile.in,
	statistics/models/Makefile.in, statistics/tests/Makefile.in,
	strings/Makefile.in, time/Makefile.in, plot/Makefile.in,
	deprecated/Makefile.in: Use new do-script-install and
	do-script-uninstall macros.

	* mkpkgadd: New script.

	* plot/close.m: New file.

2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/image.m: Use -raw option for xv.