@@ -1,3 +1,7 @@
+2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* general/int2str.m: Do a better job with 0, Inf, and NaN, 
+
 2003-01-11  Paul Kienzle <pkienzle@users.sf.net>
 
 	* Makefile.in (gethelp$(BUILD_EXEEXT)): Pass $(BUILD_CXXFLAGS) and
